@@ -1,3 +1,8 @@
+2021-11-04  Dirk Eddelbuettel  <edd@debian.org>
+
+ 	* README.md: Remove Travis badge
+	* .travis.yml: Remove Travis YAML config
+
 2021-03-19  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (URL): List GitHub repo and package page
